# ChangeLog for dev-python/pyisbn
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jun 2011; James Rowe <jnrowe@gmail.com> pyisbn-0.6.0.ebuild:
  Keyworded amd64.

*pyisbn-0.6.0 (13 May 2011)

  13 May 2011; James Rowe <jnrowe@gmail.com> +pyisbn-0.6.0.ebuild:
  Version bump [361].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> pyisbn-0.5.1.ebuild:
  Added PYTHON_DEPEND setting.

  13 Jan 2010; James Rowe <jnrowe@gmail.com> -pyisbn-0.5.0.ebuild,
  pyisbn-0.5.1.ebuild:
  Keyworded x86.

  13 Jan 2010; James Rowe <jnrowe@gmail.com> pyisbn-0.5.1.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild,
  pyisbn-0.5.1.ebuild:
  Switched to EAPI 2.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild,
  Set SUPPORT_PYTHON_ABIS [205].

*pyisbn-0.5.1 (19 Sep 2009)

  19 Sep 2009; James Rowe <jnrowe@gmail.com> +pyisbn-0.5.1.ebuild:
  Version bump [7eb].

  12 Jul 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild:
  Keyworded amd64.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> pyisbn-0.5.0.ebuild:
  Keyworded x86.

*pyisbn-0.5.0 (23 May 2009)

  23 May 2009; James Rowe <jnrowe@gmail.com> +pyisbn-0.5.0.ebuild,
  +metadata.xml:
  Imported from pre-github misc overlay.
