@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pyisbn-0.5.1.tar.bz2 51069 RMD160 16ef3917ba04a9c453abd437162ec1092ee82308 SHA1 1810e0be53ab3484a4d29be5c488e7d0472f2329 SHA256 71a43147b22cb36ee6604874adc7eec9f92d370152485d04c56f5af74d1b371a
 DIST pyisbn-0.6.0.tar.gz 31610 RMD160 9c294c09ba7a7f17b240a4386ca916fa3d10c750 SHA1 c6ca30730fead4a14c66685e4d01881b87628bfc SHA256 7bfd4c9326b0dbcad334c9cb5304f344452e07db0f5c2947ff0649d626bc5941
-EBUILD pyisbn-0.5.1.ebuild 501 RMD160 99fcd3413fd9187ed4e889332adf6cd4f76abce3 SHA1 a4826e5821c70073ab102aa834dc7ea9e3a2dd20 SHA256 9efa3bd8877f3956b6d3912dd8b187555c612af292b16dd240caacd1de4a975c
-EBUILD pyisbn-0.6.0.ebuild 651 RMD160 d7ea63cfd5749bad2114b15bafe9459c4729d934 SHA1 65476998687ae97282b4d7f3767dbf45eeb27f4b SHA256 31760083c534b75d9462c16f69958ba1c44ce91ab87ae6f37d1b99bec61da859
-MISC ChangeLog 1487 RMD160 a29e25c5291b32b7fef5315ad285663661ae326c SHA1 ea85c9e607b343e6fcd0e15657b1d157796817da SHA256 b43dea4431efe3b6850810777af61ee5a9bb080f6a56fdb6bf311ff8a1e8186b
+EBUILD pyisbn-0.6.0.ebuild 650 RMD160 1c8e1433604128c9855b37a910e453e56fd1daa0 SHA1 44296d756d65504c6a9859d2fac476bcc62e234c SHA256 14ad8e1725e280ed340f98a0e400a212e98848604f2f66c5804c2b882e1130f9
+MISC ChangeLog 1595 RMD160 47af5dc696e388b5b3b33acad470a7c00f4e5a72 SHA1 d95c8c4ff8a6604d84809cc8040b964b358f9ea4 SHA256 82ccf4069af42977b2dcb8a731a5f91f00a691011b96a3d5055cbcea794a6cc1
 MISC metadata.xml 875 RMD160 4e597f493f1f214e093a3ea39f167accfd5b8126 SHA1 6371d5ab2d7eb0761efd852cf6100b6402777073 SHA256 26623ba5b0c546a732a792390b2cba6ab21ce673a25c87c53b06c462667951dc
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk30jacACgkQzJrj3cAXR0ltQgCgvm2HQALR1jjAX2lW2NGFu7kS
-FDgAn2JLawo9EydFrRyysXFeJeBQOX3w
-=oWRw
+iEYEARECAAYFAk30j4QACgkQzJrj3cAXR0nQ8wCfa7iD5xmTDVKVG+LpUuF55cXJ
+yjQAn0RbS7q1vWSjZlmOTgFgfMkNLV25
+=jEt6
 -----END PGP SIGNATURE-----
