@@ -12,7 +12,7 @@ DESCRIPTION="A module for working with 10- and 13-digit ISBNs"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="doc"
 
 DEPEND="dev-python/setuptools
