@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 dev-lang/python
->=app-admin/eselect-python-20091230 dev-lang/python
-0
-http://www.jnrowe.ukfsn.org/_downloads/pyisbn-0.5.1.tar.bz2
-
-http://www.jnrowe.ukfsn.org/projects/pyisbn.html
-GPL-3
-A module for working with 10- and 13-digit ISBNs
-amd64 x86
-distutils multilib python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare test
-
-
-
-
-
