@@ -6,7 +6,7 @@ mirror://pypi/p/pyisbn/pyisbn-0.6.0.tar.gz
 http://pypi.python.org/pypi/pyisbn/
 GPL-3
 A module for working with 10- and 13-digit ISBNs
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 doc
 
