@@ -1,4 +1,3 @@
-* dev-python/pyisbn-0.6.0                    x86 SCHEDULED: <2011-06-12 Sun>
 * net-misc/bleeter-0.8.0                     x86 SCHEDULED: <2011-06-12 Sun>
 * dev-util/cake-0.2                        amd64 SCHEDULED: <2011-06-15 Wed>
 * media-gfx/blockdiag-0.8.1                amd64 SCHEDULED: <2011-06-15 Wed>
