@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Jun 2011; James Rowe <jnrowe@gmail.com> -pyisbn-0.5.1.ebuild,
+  pyisbn-0.6.0.ebuild:
+  Keyworded x86.
+
   12 Jun 2011; James Rowe <jnrowe@gmail.com> pyisbn-0.6.0.ebuild:
   Keyworded amd64.
 
